# YoutubeAdXMLParser

./: main.py  pyproject.toml  requirements.txt
src/: common.py  core.py  node_selectors.py  nodes.py  ocr.py
