[project]
name = "youtubeadparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "uiautomator2>=3.4.0",
]
